# Nevo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Nevo.html  README.md  changes.md  com.eliotBenitezhvat.nevo.yml  eslint.config.js  index.html  localhost-recording.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cargo/: audit.toml
build-tools/: check-bundle-size.mjs
docs/: plugins.md  (+4 more)
src-tauri/: .taurignore  AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/collab/: server.rs
src-tauri/src/commands/: ai.rs  auth.rs  config.rs  database.rs  folder.rs  fonts.rs  graph.rs  kanban.rs  kanban_ops.rs  mod.rs  path_utils.rs  system.rs  templates.rs  typst_export.rs
src-tauri/src/commands/github_sync/: mod.rs
src-tauri/src/commands/note/: assets.rs  collab.rs  crud.rs  export.rs  mod.rs  search.rs  sidebar.rs  snapshots.rs  tests.rs  trash.rs  vault_import.rs
src-tauri/src/commands/note/assets/: draw.rs  gc.rs  import.rs  mod.rs  naming.rs  remote.rs  store.rs  tests.rs
src-tauri/src/commands/notion_import/: assets.rs  mod.rs  scanner.rs  session.rs  tests.rs  types.rs
src-tauri/src/commands/workspace/: maintenance.rs  manifest.rs  marketplace.rs  mod.rs  paths.rs  plugin_sdk.rs  plugins.rs  settings.rs  types.rs
src-tauri/src/commands/workspace/marketplace/: catalog.rs  commands.rs  mod.rs  repository.rs  tests.rs  transaction.rs  types.rs
src-tauri/src/commands/workspace/settings/: home_favorites.rs
src-tauri/src/media_server/: mod.rs
(+661 files in other folders)
