[package]
name = "nevo"
version = "0.1.4"
description = "Nevo editor"
authors = ["eliotBenitez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nevo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-process = "2"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "macros", "io-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
dashmap = "5"
base64 = "0.22"
typst = "0.14"
typst-pdf = "0.14"
typst-render = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "2.0.2"
